[metadata]
name = ldap_hopper
version = 3.3.0
author = Brian Wiborg
author_email = baccenfutter@c-base.org
description = 'Client library for fast+easy access and manipulation of an LDAP directory-information-tree(DIT).'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/baccenfutter/ldap_hopper
project_urls =
    Bug Tracker = https://github.com/baccenfutter/ldap_hopper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
